--- a/index-calculadora.html
+++ b/index-calculadora.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Vai corinthian</title>
+        <title>Aula html Clean Code</title>
     </head>
     <body>
         <h1>Aula Clean Code</h1>
